# reversi

./: .gitignore  LICENSE  Main.hs  README  Setup.hs  reversi-rdancer.cabal  reversi.cabal
